--- a/package.json
+++ b/package.json
@@ -1,50 +1,28 @@
 {
-  "name": "gemini-website-builder",
+  "name": "website-builder",
   "version": "1.0.0",
-  "description": "منصة إنشاء مواقع ويب باستخدام Gemini AI مع نشر على Vercel",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "vercel-build": "node scripts/vercel-deploy.js",
-    "ai-generate": "node scripts/ai-generator.js",
-    "seed": "node database/seeders/seed.js"
+    "vercel-build": "echo 'Building for Vercel...' && npm install",
+    "build": "npm install"
   },
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.0.0",
+    "@google/generative-ai": "^0.1.3",
+    "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.0",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-github": "^1.1.0",
-    "passport-local": "^1.0.0",
-    "@google/generative-ai": "^0.1.0",
-    "axios": "^1.4.0",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.0",
     "ejs": "^3.1.9",
+    "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
     "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "helmet": "^7.0.0",
-    "compression": "^1.7.4",
-    "socket.io": "^4.6.1",
-    "uuid": "^9.0.0",
-    "form-data": "^4.0.0",
-    "cheerio": "^1.0.0-rc.12",
-    "html-to-text": "^9.0.5",
-    "express-validator": "^7.0.1",
-    "express-rate-limit": "^6.10.0",
-    "winston": "^3.9.0",
-    "node-cron": "^3.0.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22",
-    "morgan": "^1.10.0"
+    "axios": "^1.6.0",
+    "multer": "^2.0.0-rc.3"  // غير إلى الإصدار 2.x
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   }
 }
