--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "axios": "^1.6.0",
-    "multer": "^2.0.0-rc.3"  // غير إلى الإصدار 2.x
+    "multer": "^2.0.0-rc.3"
   },
   "engines": {
     "node": ">=18.0.0"
