--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "website-builder",
-  "version": "1.0.0",
+  "name": "website-builder-pro",
+  "version": "2.0.0",
+  "description": "منصة إنشاء مواقع ويب بالذكاء الاصطناعي مع نشر على Vercel",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "vercel-build": "echo 'Building for Vercel...' && npm install",
-    "build": "npm install"
+    "vercel-build": "npm install",
+    "deploy": "node scripts/vercel-deploy.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -20,7 +21,15 @@
     "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "axios": "^1.6.0",
-    "multer": "^2.0.0-rc.3"
+    "multer": "^2.0.0",
+    "sharp": "^0.33.0",
+    "helmet": "^7.0.0",
+    "compression": "^1.7.4",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   },
   "engines": {
     "node": ">=18.0.0"
